// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EC - Site Header Default renders correctly 1`] = `
<header
  class="ecl-site-header"
  data-ecl-auto-init="SiteHeader"
  data-ecl-site-header="true"
>
  <div
    class="ecl-site-header__container ecl-container"
  >
    <div
      class="ecl-site-header__banner"
    >
      <a
        aria-label="European Commission"
        class="ecl-link ecl-link--standalone"
        href="/example"
      >
        <img
          alt="European Commission logo"
          class="ecl-site-header__logo-image"
          src="/logo--en.svg"
          title="European Commission"
        />
      </a>
      <div
        class="ecl-site-header__selector"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-site-header__selector-link"
          data-ecl-language-selector="true"
          href="/example"
        >
          English
          <span
            class="ecl-site-header__language-icon"
          >
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--m"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#general--language"
              />
            </svg>
            <span
              class="ecl-site-header__language-code"
            >
              en
            </span>
          </span>
        </a>
        <div
          aria-labelledby="ecl-language-list__title"
          class="ecl-language-list ecl-language-list--splash"
          hidden=""
          role="dialog"
        >
          <header
            class="ecl-language-list__header"
          >
            <img
              alt="European Commission logo"
              class="ecl-language-list__logo"
              src=""
            />
          </header>
          <div
            class="ecl-language-list__container ecl-container"
          >
            <div
              class="ecl-row"
            >
              <div
                class="ecl-language-list__column ecl-col-12 ecl-col-lg-4 ecl-offset-lg-2"
              >
                <ul
                  class="ecl-language-list__list"
                >
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_bg"
                      hreflang="bg"
                      lang="bg"
                    >
                      български
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_es"
                      hreflang="es"
                      lang="es"
                    >
                      español
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_cs"
                      hreflang="cs"
                      lang="cs"
                    >
                      čeština
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_da"
                      hreflang="da"
                      lang="da"
                    >
                      dansk
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_de"
                      hreflang="de"
                      lang="de"
                    >
                      Deutsch
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_et"
                      hreflang="et"
                      lang="et"
                    >
                      eesti
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_el"
                      hreflang="el"
                      lang="el"
                    >
                      ελληνικά
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item ecl-language-list__item--is-active"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after ecl-language-list__link"
                      href="/example#language_en"
                      hreflang="en"
                      lang="en"
                    >
                      <span
                        class="ecl-link__label"
                      >
                        English
                      </span>
                       
                      <svg
                        aria-hidden="true"
                        class="ecl-icon ecl-icon--xs ecl-link__icon"
                        focusable="false"
                      >
                        <use
                          xlink:href="/icons.svg#ui--check"
                        />
                      </svg>
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_fr"
                      hreflang="fr"
                      lang="fr"
                    >
                      français
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_ga"
                      hreflang="ga"
                      lang="ga"
                    >
                      Gaeilge
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_hr"
                      hreflang="hr"
                      lang="hr"
                    >
                      hrvatski
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_it"
                      hreflang="it"
                      lang="it"
                    >
                      italiano
                    </a>
                  </li>
                </ul>
              </div>
              <div
                class="ecl-language-list__column ecl-col-12 ecl-col-lg-4"
              >
                <ul
                  class="ecl-language-list__list"
                >
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_lv"
                      hreflang="lv"
                      lang="lv"
                    >
                      latviešu
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_lt"
                      hreflang="lt"
                      lang="lt"
                    >
                      lietuvių
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_hu"
                      hreflang="hu"
                      lang="hu"
                    >
                      magyar
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_mt"
                      hreflang="mt"
                      lang="mt"
                    >
                      Malti
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_nl"
                      hreflang="nl"
                      lang="nl"
                    >
                      Nederlands
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_pl"
                      hreflang="pl"
                      lang="pl"
                    >
                      polski
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_pt"
                      hreflang="pt"
                      lang="pt"
                    >
                      português
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_ro"
                      hreflang="ro"
                      lang="ro"
                    >
                      română
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_sk"
                      hreflang="sk"
                      lang="sk"
                    >
                      slovenčina
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_sl"
                      hreflang="sl"
                      lang="sl"
                    >
                      slovenščina
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_fi"
                      hreflang="fi"
                      lang="fi"
                    >
                      suomi
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_sv"
                      hreflang="sv"
                      lang="sv"
                    >
                      svenska
                    </a>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <form
      class="ecl-search-form ecl-site-header__search"
      role="search"
    >
      <div
        class="ecl-form-group ecl-form-group--text-input"
      >
        <label
          class="ecl-form-label ecl-search-form__label"
          for="search-form"
        >
          Search
        </label>
        <input
          class="ecl-text-input ecl-text-input--m ecl-search-form__text-input"
          id="search-form"
          name="Search"
          type="search"
        />
      </div>
      <button
        aria-label="Search"
        class="ecl-button ecl-button--search ecl-search-form__button"
        type="submit"
      >
        <span
          class="ecl-button__container"
        >
          <span
            class="ecl-button__label"
            data-ecl-label="true"
          >
            Search
          </span>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-button__icon ecl-button__icon--after"
            data-ecl-icon=""
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#general--search"
            />
          </svg>
        </span>
      </button>
    </form>
  </div>
</header>
`;

exports[`EC - Site Header Default renders correctly with extra attributes 1`] = `
<header
  class="ecl-site-header"
  data-ecl-auto-init="SiteHeader"
  data-ecl-site-header="true"
  data-test="data-test-value"
  data-test-1="data-test-value-1"
>
  <div
    class="ecl-site-header__container ecl-container"
  >
    <div
      class="ecl-site-header__banner"
    >
      <a
        aria-label="European Commission"
        class="ecl-link ecl-link--standalone"
        href="/example"
      >
        <img
          alt="European Commission logo"
          class="ecl-site-header__logo-image"
          src="/logo--en.svg"
          title="European Commission"
        />
      </a>
      <div
        class="ecl-site-header__selector"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-site-header__selector-link"
          data-ecl-language-selector="true"
          href="/example"
        >
          English
          <span
            class="ecl-site-header__language-icon"
          >
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--m"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#general--language"
              />
            </svg>
            <span
              class="ecl-site-header__language-code"
            >
              en
            </span>
          </span>
        </a>
        <div
          aria-labelledby="ecl-language-list__title"
          class="ecl-language-list ecl-language-list--splash"
          hidden=""
          role="dialog"
        >
          <header
            class="ecl-language-list__header"
          >
            <img
              alt="European Commission logo"
              class="ecl-language-list__logo"
              src=""
            />
          </header>
          <div
            class="ecl-language-list__container ecl-container"
          >
            <div
              class="ecl-row"
            >
              <div
                class="ecl-language-list__column ecl-col-12 ecl-col-lg-4 ecl-offset-lg-2"
              >
                <ul
                  class="ecl-language-list__list"
                >
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_bg"
                      hreflang="bg"
                      lang="bg"
                    >
                      български
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_es"
                      hreflang="es"
                      lang="es"
                    >
                      español
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_cs"
                      hreflang="cs"
                      lang="cs"
                    >
                      čeština
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_da"
                      hreflang="da"
                      lang="da"
                    >
                      dansk
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_de"
                      hreflang="de"
                      lang="de"
                    >
                      Deutsch
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_et"
                      hreflang="et"
                      lang="et"
                    >
                      eesti
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_el"
                      hreflang="el"
                      lang="el"
                    >
                      ελληνικά
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item ecl-language-list__item--is-active"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after ecl-language-list__link"
                      href="/example#language_en"
                      hreflang="en"
                      lang="en"
                    >
                      <span
                        class="ecl-link__label"
                      >
                        English
                      </span>
                       
                      <svg
                        aria-hidden="true"
                        class="ecl-icon ecl-icon--xs ecl-link__icon"
                        focusable="false"
                      >
                        <use
                          xlink:href="/icons.svg#ui--check"
                        />
                      </svg>
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_fr"
                      hreflang="fr"
                      lang="fr"
                    >
                      français
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_ga"
                      hreflang="ga"
                      lang="ga"
                    >
                      Gaeilge
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_hr"
                      hreflang="hr"
                      lang="hr"
                    >
                      hrvatski
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_it"
                      hreflang="it"
                      lang="it"
                    >
                      italiano
                    </a>
                  </li>
                </ul>
              </div>
              <div
                class="ecl-language-list__column ecl-col-12 ecl-col-lg-4"
              >
                <ul
                  class="ecl-language-list__list"
                >
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_lv"
                      hreflang="lv"
                      lang="lv"
                    >
                      latviešu
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_lt"
                      hreflang="lt"
                      lang="lt"
                    >
                      lietuvių
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_hu"
                      hreflang="hu"
                      lang="hu"
                    >
                      magyar
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_mt"
                      hreflang="mt"
                      lang="mt"
                    >
                      Malti
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_nl"
                      hreflang="nl"
                      lang="nl"
                    >
                      Nederlands
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_pl"
                      hreflang="pl"
                      lang="pl"
                    >
                      polski
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_pt"
                      hreflang="pt"
                      lang="pt"
                    >
                      português
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_ro"
                      hreflang="ro"
                      lang="ro"
                    >
                      română
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_sk"
                      hreflang="sk"
                      lang="sk"
                    >
                      slovenčina
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_sl"
                      hreflang="sl"
                      lang="sl"
                    >
                      slovenščina
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_fi"
                      hreflang="fi"
                      lang="fi"
                    >
                      suomi
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_sv"
                      hreflang="sv"
                      lang="sv"
                    >
                      svenska
                    </a>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <form
      class="ecl-search-form ecl-site-header__search"
      role="search"
    >
      <div
        class="ecl-form-group ecl-form-group--text-input"
      >
        <label
          class="ecl-form-label ecl-search-form__label"
          for="search-form"
        >
          Search
        </label>
        <input
          class="ecl-text-input ecl-text-input--m ecl-search-form__text-input"
          id="search-form"
          name="Search"
          type="search"
        />
      </div>
      <button
        aria-label="Search"
        class="ecl-button ecl-button--search ecl-search-form__button"
        type="submit"
      >
        <span
          class="ecl-button__container"
        >
          <span
            class="ecl-button__label"
            data-ecl-label="true"
          >
            Search
          </span>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-button__icon ecl-button__icon--after"
            data-ecl-icon=""
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#general--search"
            />
          </svg>
        </span>
      </button>
    </form>
  </div>
</header>
`;

exports[`EC - Site Header Default renders correctly with extra class names 1`] = `
<header
  class="ecl-site-header custom-class custom-class--test"
  data-ecl-auto-init="SiteHeader"
  data-ecl-site-header="true"
>
  <div
    class="ecl-site-header__container ecl-container"
  >
    <div
      class="ecl-site-header__banner"
    >
      <a
        aria-label="European Commission"
        class="ecl-link ecl-link--standalone"
        href="/example"
      >
        <img
          alt="European Commission logo"
          class="ecl-site-header__logo-image"
          src="/logo--en.svg"
          title="European Commission"
        />
      </a>
      <div
        class="ecl-site-header__selector"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-site-header__selector-link"
          data-ecl-language-selector="true"
          href="/example"
        >
          English
          <span
            class="ecl-site-header__language-icon"
          >
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--m"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#general--language"
              />
            </svg>
            <span
              class="ecl-site-header__language-code"
            >
              en
            </span>
          </span>
        </a>
        <div
          aria-labelledby="ecl-language-list__title"
          class="ecl-language-list ecl-language-list--splash custom-class custom-class--test"
          hidden=""
          role="dialog"
        >
          <header
            class="ecl-language-list__header"
          >
            <img
              alt="European Commission logo"
              class="ecl-language-list__logo"
              src=""
            />
          </header>
          <div
            class="ecl-language-list__container ecl-container"
          >
            <div
              class="ecl-row"
            >
              <div
                class="ecl-language-list__column ecl-col-12 ecl-col-lg-4 ecl-offset-lg-2"
              >
                <ul
                  class="ecl-language-list__list"
                >
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_bg"
                      hreflang="bg"
                      lang="bg"
                    >
                      български
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_es"
                      hreflang="es"
                      lang="es"
                    >
                      español
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_cs"
                      hreflang="cs"
                      lang="cs"
                    >
                      čeština
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_da"
                      hreflang="da"
                      lang="da"
                    >
                      dansk
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_de"
                      hreflang="de"
                      lang="de"
                    >
                      Deutsch
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_et"
                      hreflang="et"
                      lang="et"
                    >
                      eesti
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_el"
                      hreflang="el"
                      lang="el"
                    >
                      ελληνικά
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item ecl-language-list__item--is-active"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after ecl-language-list__link"
                      href="/example#language_en"
                      hreflang="en"
                      lang="en"
                    >
                      <span
                        class="ecl-link__label"
                      >
                        English
                      </span>
                       
                      <svg
                        aria-hidden="true"
                        class="ecl-icon ecl-icon--xs ecl-link__icon"
                        focusable="false"
                      >
                        <use
                          xlink:href="/icons.svg#ui--check"
                        />
                      </svg>
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_fr"
                      hreflang="fr"
                      lang="fr"
                    >
                      français
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_ga"
                      hreflang="ga"
                      lang="ga"
                    >
                      Gaeilge
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_hr"
                      hreflang="hr"
                      lang="hr"
                    >
                      hrvatski
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_it"
                      hreflang="it"
                      lang="it"
                    >
                      italiano
                    </a>
                  </li>
                </ul>
              </div>
              <div
                class="ecl-language-list__column ecl-col-12 ecl-col-lg-4"
              >
                <ul
                  class="ecl-language-list__list"
                >
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_lv"
                      hreflang="lv"
                      lang="lv"
                    >
                      latviešu
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_lt"
                      hreflang="lt"
                      lang="lt"
                    >
                      lietuvių
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_hu"
                      hreflang="hu"
                      lang="hu"
                    >
                      magyar
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_mt"
                      hreflang="mt"
                      lang="mt"
                    >
                      Malti
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_nl"
                      hreflang="nl"
                      lang="nl"
                    >
                      Nederlands
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_pl"
                      hreflang="pl"
                      lang="pl"
                    >
                      polski
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_pt"
                      hreflang="pt"
                      lang="pt"
                    >
                      português
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_ro"
                      hreflang="ro"
                      lang="ro"
                    >
                      română
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_sk"
                      hreflang="sk"
                      lang="sk"
                    >
                      slovenčina
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_sl"
                      hreflang="sl"
                      lang="sl"
                    >
                      slovenščina
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_fi"
                      hreflang="fi"
                      lang="fi"
                    >
                      suomi
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_sv"
                      hreflang="sv"
                      lang="sv"
                    >
                      svenska
                    </a>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <form
      class="ecl-search-form ecl-site-header__search"
      role="search"
    >
      <div
        class="ecl-form-group ecl-form-group--text-input"
      >
        <label
          class="ecl-form-label ecl-search-form__label"
          for="search-form"
        >
          Search
        </label>
        <input
          class="ecl-text-input ecl-text-input--m ecl-search-form__text-input"
          id="search-form"
          name="Search"
          type="search"
        />
      </div>
      <button
        aria-label="Search"
        class="ecl-button ecl-button--search ecl-search-form__button"
        type="submit"
      >
        <span
          class="ecl-button__container"
        >
          <span
            class="ecl-button__label"
            data-ecl-label="true"
          >
            Search
          </span>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-button__icon ecl-button__icon--after"
            data-ecl-icon=""
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#general--search"
            />
          </svg>
        </span>
      </button>
    </form>
  </div>
</header>
`;

exports[`EC - Site Header Translated renders correctly 1`] = `
<header
  class="ecl-site-header"
  data-ecl-auto-init="SiteHeader"
  data-ecl-site-header="true"
>
  <div
    class="ecl-site-header__container ecl-container"
  >
    <div
      class="ecl-site-header__banner"
    >
      <a
        aria-label="Commmission Européenne"
        class="ecl-link ecl-link--standalone"
        href="/example"
      >
        <img
          alt="Logo Commmission Européenne"
          class="ecl-site-header__logo-image"
          src="/logo--fr.svg"
          title="Commmission Européenne"
        />
      </a>
      <div
        class="ecl-site-header__selector"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-site-header__selector-link"
          data-ecl-language-selector="true"
          href="/example"
        >
          Français
          <span
            class="ecl-site-header__language-icon"
          >
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--m"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#general--language"
              />
            </svg>
            <span
              class="ecl-site-header__language-code"
            >
              fr
            </span>
          </span>
        </a>
        <div
          aria-labelledby="ecl-language-list__title"
          class="ecl-language-list ecl-language-list--splash"
          hidden=""
          role="dialog"
        >
          <header
            class="ecl-language-list__header"
          >
            <img
              alt="Logo Commmission Européenne"
              class="ecl-language-list__logo"
              src=""
            />
          </header>
          <div
            class="ecl-language-list__container ecl-container"
          >
            <div
              class="ecl-row"
            >
              <div
                class="ecl-language-list__column ecl-col-12 ecl-col-lg-4 ecl-offset-lg-2"
              >
                <ul
                  class="ecl-language-list__list"
                >
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_bg"
                      hreflang="bg"
                      lang="bg"
                    >
                      български
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_es"
                      hreflang="es"
                      lang="es"
                    >
                      español
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_cs"
                      hreflang="cs"
                      lang="cs"
                    >
                      čeština
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_da"
                      hreflang="da"
                      lang="da"
                    >
                      dansk
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_de"
                      hreflang="de"
                      lang="de"
                    >
                      Deutsch
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_et"
                      hreflang="et"
                      lang="et"
                    >
                      eesti
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_el"
                      hreflang="el"
                      lang="el"
                    >
                      ελληνικά
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_en"
                      hreflang="en"
                      lang="en"
                    >
                      English
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item ecl-language-list__item--is-active"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after ecl-language-list__link"
                      href="/example#language_fr"
                      hreflang="fr"
                      lang="fr"
                    >
                      <span
                        class="ecl-link__label"
                      >
                        français
                      </span>
                       
                      <svg
                        aria-hidden="true"
                        class="ecl-icon ecl-icon--xs ecl-link__icon"
                        focusable="false"
                      >
                        <use
                          xlink:href="/icons.svg#ui--check"
                        />
                      </svg>
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_ga"
                      hreflang="ga"
                      lang="ga"
                    >
                      Gaeilge
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_hr"
                      hreflang="hr"
                      lang="hr"
                    >
                      hrvatski
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_it"
                      hreflang="it"
                      lang="it"
                    >
                      italiano
                    </a>
                  </li>
                </ul>
              </div>
              <div
                class="ecl-language-list__column ecl-col-12 ecl-col-lg-4"
              >
                <ul
                  class="ecl-language-list__list"
                >
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_lv"
                      hreflang="lv"
                      lang="lv"
                    >
                      latviešu
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_lt"
                      hreflang="lt"
                      lang="lt"
                    >
                      lietuvių
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_hu"
                      hreflang="hu"
                      lang="hu"
                    >
                      magyar
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_mt"
                      hreflang="mt"
                      lang="mt"
                    >
                      Malti
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_nl"
                      hreflang="nl"
                      lang="nl"
                    >
                      Nederlands
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_pl"
                      hreflang="pl"
                      lang="pl"
                    >
                      polski
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_pt"
                      hreflang="pt"
                      lang="pt"
                    >
                      português
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_ro"
                      hreflang="ro"
                      lang="ro"
                    >
                      română
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_sk"
                      hreflang="sk"
                      lang="sk"
                    >
                      slovenčina
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_sl"
                      hreflang="sl"
                      lang="sl"
                    >
                      slovenščina
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_fi"
                      hreflang="fi"
                      lang="fi"
                    >
                      suomi
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_sv"
                      hreflang="sv"
                      lang="sv"
                    >
                      svenska
                    </a>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <form
      class="ecl-search-form ecl-site-header__search"
      role="search"
    >
      <div
        class="ecl-form-group ecl-form-group--text-input"
      >
        <label
          class="ecl-form-label ecl-search-form__label"
          for="search-form"
        >
          Recherche
        </label>
        <input
          class="ecl-text-input ecl-text-input--m ecl-search-form__text-input"
          id="search-form"
          name="Recherche"
          type="search"
        />
      </div>
      <button
        aria-label="Search"
        class="ecl-button ecl-button--search ecl-search-form__button"
        type="submit"
      >
        <span
          class="ecl-button__container"
        >
          <span
            class="ecl-button__label"
            data-ecl-label="true"
          >
            Recherche
          </span>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-button__icon ecl-button__icon--after"
            data-ecl-icon=""
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#general--search"
            />
          </svg>
        </span>
      </button>
    </form>
  </div>
</header>
`;

exports[`EC - Site Header Translated renders correctly with extra attributes 1`] = `
<header
  class="ecl-site-header"
  data-ecl-auto-init="SiteHeader"
  data-ecl-site-header="true"
  data-test="data-test-value"
  data-test-1="data-test-value-1"
>
  <div
    class="ecl-site-header__container ecl-container"
  >
    <div
      class="ecl-site-header__banner"
    >
      <a
        aria-label="Commmission Européenne"
        class="ecl-link ecl-link--standalone"
        href="/example"
      >
        <img
          alt="Logo Commmission Européenne"
          class="ecl-site-header__logo-image"
          src="/logo--fr.svg"
          title="Commmission Européenne"
        />
      </a>
      <div
        class="ecl-site-header__selector"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-site-header__selector-link"
          data-ecl-language-selector="true"
          href="/example"
        >
          Français
          <span
            class="ecl-site-header__language-icon"
          >
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--m"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#general--language"
              />
            </svg>
            <span
              class="ecl-site-header__language-code"
            >
              fr
            </span>
          </span>
        </a>
        <div
          aria-labelledby="ecl-language-list__title"
          class="ecl-language-list ecl-language-list--splash"
          hidden=""
          role="dialog"
        >
          <header
            class="ecl-language-list__header"
          >
            <img
              alt="Logo Commmission Européenne"
              class="ecl-language-list__logo"
              src=""
            />
          </header>
          <div
            class="ecl-language-list__container ecl-container"
          >
            <div
              class="ecl-row"
            >
              <div
                class="ecl-language-list__column ecl-col-12 ecl-col-lg-4 ecl-offset-lg-2"
              >
                <ul
                  class="ecl-language-list__list"
                >
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_bg"
                      hreflang="bg"
                      lang="bg"
                    >
                      български
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_es"
                      hreflang="es"
                      lang="es"
                    >
                      español
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_cs"
                      hreflang="cs"
                      lang="cs"
                    >
                      čeština
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_da"
                      hreflang="da"
                      lang="da"
                    >
                      dansk
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_de"
                      hreflang="de"
                      lang="de"
                    >
                      Deutsch
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_et"
                      hreflang="et"
                      lang="et"
                    >
                      eesti
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_el"
                      hreflang="el"
                      lang="el"
                    >
                      ελληνικά
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_en"
                      hreflang="en"
                      lang="en"
                    >
                      English
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item ecl-language-list__item--is-active"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after ecl-language-list__link"
                      href="/example#language_fr"
                      hreflang="fr"
                      lang="fr"
                    >
                      <span
                        class="ecl-link__label"
                      >
                        français
                      </span>
                       
                      <svg
                        aria-hidden="true"
                        class="ecl-icon ecl-icon--xs ecl-link__icon"
                        focusable="false"
                      >
                        <use
                          xlink:href="/icons.svg#ui--check"
                        />
                      </svg>
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_ga"
                      hreflang="ga"
                      lang="ga"
                    >
                      Gaeilge
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_hr"
                      hreflang="hr"
                      lang="hr"
                    >
                      hrvatski
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_it"
                      hreflang="it"
                      lang="it"
                    >
                      italiano
                    </a>
                  </li>
                </ul>
              </div>
              <div
                class="ecl-language-list__column ecl-col-12 ecl-col-lg-4"
              >
                <ul
                  class="ecl-language-list__list"
                >
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_lv"
                      hreflang="lv"
                      lang="lv"
                    >
                      latviešu
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_lt"
                      hreflang="lt"
                      lang="lt"
                    >
                      lietuvių
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_hu"
                      hreflang="hu"
                      lang="hu"
                    >
                      magyar
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_mt"
                      hreflang="mt"
                      lang="mt"
                    >
                      Malti
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_nl"
                      hreflang="nl"
                      lang="nl"
                    >
                      Nederlands
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_pl"
                      hreflang="pl"
                      lang="pl"
                    >
                      polski
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_pt"
                      hreflang="pt"
                      lang="pt"
                    >
                      português
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_ro"
                      hreflang="ro"
                      lang="ro"
                    >
                      română
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_sk"
                      hreflang="sk"
                      lang="sk"
                    >
                      slovenčina
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_sl"
                      hreflang="sl"
                      lang="sl"
                    >
                      slovenščina
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_fi"
                      hreflang="fi"
                      lang="fi"
                    >
                      suomi
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_sv"
                      hreflang="sv"
                      lang="sv"
                    >
                      svenska
                    </a>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <form
      class="ecl-search-form ecl-site-header__search"
      role="search"
    >
      <div
        class="ecl-form-group ecl-form-group--text-input"
      >
        <label
          class="ecl-form-label ecl-search-form__label"
          for="search-form"
        >
          Recherche
        </label>
        <input
          class="ecl-text-input ecl-text-input--m ecl-search-form__text-input"
          id="search-form"
          name="Recherche"
          type="search"
        />
      </div>
      <button
        aria-label="Search"
        class="ecl-button ecl-button--search ecl-search-form__button"
        type="submit"
      >
        <span
          class="ecl-button__container"
        >
          <span
            class="ecl-button__label"
            data-ecl-label="true"
          >
            Recherche
          </span>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-button__icon ecl-button__icon--after"
            data-ecl-icon=""
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#general--search"
            />
          </svg>
        </span>
      </button>
    </form>
  </div>
</header>
`;

exports[`EC - Site Header Translated renders correctly with extra class names 1`] = `
<header
  class="ecl-site-header custom-class custom-class--test"
  data-ecl-auto-init="SiteHeader"
  data-ecl-site-header="true"
>
  <div
    class="ecl-site-header__container ecl-container"
  >
    <div
      class="ecl-site-header__banner"
    >
      <a
        aria-label="Commmission Européenne"
        class="ecl-link ecl-link--standalone"
        href="/example"
      >
        <img
          alt="Logo Commmission Européenne"
          class="ecl-site-header__logo-image"
          src="/logo--fr.svg"
          title="Commmission Européenne"
        />
      </a>
      <div
        class="ecl-site-header__selector"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-site-header__selector-link"
          data-ecl-language-selector="true"
          href="/example"
        >
          Français
          <span
            class="ecl-site-header__language-icon"
          >
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--m"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#general--language"
              />
            </svg>
            <span
              class="ecl-site-header__language-code"
            >
              fr
            </span>
          </span>
        </a>
        <div
          aria-labelledby="ecl-language-list__title"
          class="ecl-language-list ecl-language-list--splash custom-class custom-class--test"
          hidden=""
          role="dialog"
        >
          <header
            class="ecl-language-list__header"
          >
            <img
              alt="Logo Commmission Européenne"
              class="ecl-language-list__logo"
              src=""
            />
          </header>
          <div
            class="ecl-language-list__container ecl-container"
          >
            <div
              class="ecl-row"
            >
              <div
                class="ecl-language-list__column ecl-col-12 ecl-col-lg-4 ecl-offset-lg-2"
              >
                <ul
                  class="ecl-language-list__list"
                >
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_bg"
                      hreflang="bg"
                      lang="bg"
                    >
                      български
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_es"
                      hreflang="es"
                      lang="es"
                    >
                      español
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_cs"
                      hreflang="cs"
                      lang="cs"
                    >
                      čeština
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_da"
                      hreflang="da"
                      lang="da"
                    >
                      dansk
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_de"
                      hreflang="de"
                      lang="de"
                    >
                      Deutsch
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_et"
                      hreflang="et"
                      lang="et"
                    >
                      eesti
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_el"
                      hreflang="el"
                      lang="el"
                    >
                      ελληνικά
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_en"
                      hreflang="en"
                      lang="en"
                    >
                      English
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item ecl-language-list__item--is-active"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after ecl-language-list__link"
                      href="/example#language_fr"
                      hreflang="fr"
                      lang="fr"
                    >
                      <span
                        class="ecl-link__label"
                      >
                        français
                      </span>
                       
                      <svg
                        aria-hidden="true"
                        class="ecl-icon ecl-icon--xs ecl-link__icon"
                        focusable="false"
                      >
                        <use
                          xlink:href="/icons.svg#ui--check"
                        />
                      </svg>
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_ga"
                      hreflang="ga"
                      lang="ga"
                    >
                      Gaeilge
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_hr"
                      hreflang="hr"
                      lang="hr"
                    >
                      hrvatski
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_it"
                      hreflang="it"
                      lang="it"
                    >
                      italiano
                    </a>
                  </li>
                </ul>
              </div>
              <div
                class="ecl-language-list__column ecl-col-12 ecl-col-lg-4"
              >
                <ul
                  class="ecl-language-list__list"
                >
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_lv"
                      hreflang="lv"
                      lang="lv"
                    >
                      latviešu
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_lt"
                      hreflang="lt"
                      lang="lt"
                    >
                      lietuvių
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_hu"
                      hreflang="hu"
                      lang="hu"
                    >
                      magyar
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_mt"
                      hreflang="mt"
                      lang="mt"
                    >
                      Malti
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_nl"
                      hreflang="nl"
                      lang="nl"
                    >
                      Nederlands
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_pl"
                      hreflang="pl"
                      lang="pl"
                    >
                      polski
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_pt"
                      hreflang="pt"
                      lang="pt"
                    >
                      português
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_ro"
                      hreflang="ro"
                      lang="ro"
                    >
                      română
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_sk"
                      hreflang="sk"
                      lang="sk"
                    >
                      slovenčina
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_sl"
                      hreflang="sl"
                      lang="sl"
                    >
                      slovenščina
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_fi"
                      hreflang="fi"
                      lang="fi"
                    >
                      suomi
                    </a>
                  </li>
                  <li
                    class="ecl-language-list__item"
                  >
                    <a
                      class="ecl-link ecl-link--standalone ecl-language-list__link"
                      href="/example#language_sv"
                      hreflang="sv"
                      lang="sv"
                    >
                      svenska
                    </a>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <form
      class="ecl-search-form ecl-site-header__search"
      role="search"
    >
      <div
        class="ecl-form-group ecl-form-group--text-input"
      >
        <label
          class="ecl-form-label ecl-search-form__label"
          for="search-form"
        >
          Recherche
        </label>
        <input
          class="ecl-text-input ecl-text-input--m ecl-search-form__text-input"
          id="search-form"
          name="Recherche"
          type="search"
        />
      </div>
      <button
        aria-label="Search"
        class="ecl-button ecl-button--search ecl-search-form__button"
        type="submit"
      >
        <span
          class="ecl-button__container"
        >
          <span
            class="ecl-button__label"
            data-ecl-label="true"
          >
            Recherche
          </span>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-button__icon ecl-button__icon--after"
            data-ecl-icon=""
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#general--search"
            />
          </svg>
        </span>
      </button>
    </form>
  </div>
</header>
`;
